new content0 added

--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
     <header>TEST HTML</header>
     <body>
         INITIAL CONTENT0
+        <div>
+            new content0
+        </div>
     </body>
 </html>
