new content1 added

--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
         <div>
             new content0
         </div>
+        <div>
+            new content1
+        </div>
     </body>
 </html>
